<resources>
    <string name="app_name">Siase Pocket</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="username">Matrícula</string>
    <string name="password">Contraseña</string>
    <string name="signInError">Matrícula o contraseña incorrectos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="accountMenuItem">Cuenta</string>
    <string name="accountMenuDesc">Administra tu cuenta</string>
    <string name="homeToolbarTitle">Hola, %s</string>
    <string name="schedulesText">Horarios</string>
    <string name="opportunityText">Oportunidad %s</string>
    <string name="scheduleDetailText">Horario</string>
    <string name="kardexText">Kárdex</string>
    <string name="homeText">Inicio</string>
    <string name="careersText">Carreras</string>
    <string name="moreText">Más</string>
    <string name="mainCareerSelectionDesc">Seleccione la carrera que está cursando actualmente</string>
    <string name="mainScheduleSelectionDesc">Seleccione su horario actual</string>

    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>

    <string name="mondayShort">Lun</string>
    <string name="tuesdayShort">Mar</string>
    <string name="wednesdayShort">Mié</string>
    <string name="thursdayShort">Jue</string>
    <string name="fridayShort">Vie</string>
    <string name="saturdayShort">Sáb</string>
    <string name="sundayShort">Dom</string>

    <string name="availableSpace">Lugares disponibles: %d</string>


    <string name="sessionError">Ocurrió un error al recuperar su sesión</string>
    <string name="credentialsError">Matrícula o contraseña incorrectos</string>
    <string name="retryText">Reintentar</string>
    <string name="errorDescription">Ícono de error</string>
    <string name="classDescription">Ícono de clase</string>
    <string name="scheduleDescription">Ícono de horario</string>
    <string name="notificationTitle">Siguiente clase</string>
    <string name="notificationDescriptionFifteenMin">%s empieza en 15 minutos</string>
    <string name="notificationDescription">%s ha empezado</string>
    <string name="notificationsChannelName">"Notificaciones de horario"</string>
    <string name="notificationsChannelDescription">"Notificaciones de las clases en tu horario principal"</string>

    <string name="welcomeText">¡Hola, %s!</string>
    <string name="hourRange">%s - %s</string>
    <string name="nextClass">Siguiente Clase</string>
    <string name="noMoreClassesText">¡Felicidades, has terminado por hoy!</string>
    <string name="sourceCodeText">Código Fuente</string>
    <string name="versionText">Versión</string>
    <string name="githubText">Github</string>
    <string name="unknownText">Kevin Villalobos</string>
    <string name="appNameText">Nombre de la app</string>
    <string name="iconDesignerText">Diseñador del ícono</string>
    <string name="iconDesignerName">David Lázaro</string>
    <string name="developerText">Desarrollador</string>
    <string name="developerName">Fernando Maldonado</string>
    <string name="accountText">Cuenta</string>
    <string name="aboutAppText">Acerca de la app</string>
    <string name="changeMainCareerText">Cambiar Carrera Principal</string>
    <string name="changeMainScheduleText">Cambiar horario principal</string>
    <string name="todaysClassesText">Clases de hoy</string>
    <string name="settingsText">Configuración</string>
    <string name="signOutSummary">Cierra la sesión actual</string>
    <string name="signOutText">Cerrar Sesión</string>
    <string name="seeCompleteScheduleText">Ver horario completo</string>
    <string name="classKeyText">Clave de materia</string>
    <string name="classroomText">Salón</string>
    <string name="groupText">Grupo</string>
    <string name="modalityText">Modalidad</string>
    <string name="scheduleText">Horario</string>
    <string name="notificationsText">Notificaciones</string>
    <string name="notificationsDescriptionText">Notificaciones del horario principal</string>
    <string name="changeThemeText">Aplicar colores dinámicos</string>
    <string name="changeThemeDescription">Se aplican los colores del sistema</string>
    <string name="noClassesText">No tienes clases presenciales en este horario</string>
    <string name="afisText">AFIs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>