<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settingsText" />

    <Preference
        app:icon="@drawable/school_icon"
        app:key="career"
        app:summary="ASD"
        app:title="@string/changeMainCareerText" />
    <Preference
        app:icon="@drawable/schedule_icon"
        app:key="schedule"
        app:summary="ASD"
        app:title="@string/changeMainScheduleText" />
    <SwitchPreference
        android:icon="@drawable/notifications_icon"
        app:key="notifications"
        app:summary="@string/notificationsDescriptionText"
        app:title="@string/notificationsText" />
    <Preference
        app:icon="@drawable/sign_out_icon"
        app:key="signOut"
        app:summary="@string/signOutSummary"
        app:title="@string/signOutText" />
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/aboutAppText" />
    <Preference
        app:icon="@drawable/twitter_icon"
        app:key="aboutDev"
        app:summary="@string/developerName"
        app:title="@string/developerText" />
    <Preference
        app:icon="@drawable/twitter_icon"
        app:key="aboutIcon"
        app:summary="@string/iconDesignerName"
        app:title="@string/iconDesignerText" />
    <Preference
        app:icon="@drawable/android_icon"
        app:key="aboutAppName"
        app:summary="@string/unknownText"
        app:title="@string/appNameText" />
    <Preference
        app:icon="@drawable/version_icon"
        app:key="version"
        app:summary="2.1"
        app:title="@string/versionText" />
    <Preference
        app:icon="@drawable/code_icon"
        app:key="sourceCode"
        app:summary="@string/githubText"
        app:title="@string/sourceCodeText" />
</androidx.preference.PreferenceScreen>