<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.fmaldonado.siase.ui.utils.Status" />

        <import type="com.fmaldonado.siase.data.models.ClassDetail" />

        <import type="android.view.View" />

        <variable
            name="status"
            type="Status" />

        <variable
            name="classDetail"
            type="ClassDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                style="?attr/collapsingToolbarLayoutLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
                app:contentScrim="?colorSurfaceVariant"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:ignore="SpeakableTextPresentCheck">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{status == Status.Loaded ? View.VISIBLE : View.INVISIBLE}">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/nextClass"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"

                    android:text="@string/noMoreClassesText"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    android:visibility="@{classDetail == null ? View.VISIBLE : View.GONE}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{classDetail != null ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/nextClass"
                        style="?attr/materialCardViewFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:contentPadding="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceTitleMedium"
                                tools:text="TextView" />

                            <TextView
                                android:id="@+id/subtitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textColor="?android:attr/textColorSecondary"
                                android:textSize="12sp"
                                tools:text="TextView" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/todaysClassesText"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/completeScheduleButton"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seeCompleteScheduleText" />

                </LinearLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/scheduleDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="?colorPrimary"
            android:visibility="@{status == Status.Loading ? View.VISIBLE : View.INVISIBLE}" />

        <include
            android:id="@+id/errorLayout"
            layout="@layout/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:visibility="@{status == Status.Error ? View.VISIBLE : View.GONE}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>